--- a/src/index.css
+++ b/src/index.css
@@ -245,6 +245,90 @@ border-bottom: 1px solid #ccc;
 
 
 
+/* Calling dessign */
+.incomingCallContainer {
+  width: 100%;
+  height: 80vh;
+  justify-content: center;
+  display: flex;
+  align-items: center;
+}
+span.callerID {
+  font-size: 24px;
+  text-transform: capitalize;
+  font-weight: 500;
+  color: #404040;
+}
+button.alertButtonPrimary {
+  background: #02a202;
+  color: white;
+  padding: 5px 21px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+}
+button.alertButtonSecondary {
+  background: #da0000;
+  color: white;
+  padding: 5px 21px;
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+}
+
+
+/* vide container */
+.video_container {
+  position: relative;
+  height: 83vh;
+  padding: 0;
+  margin: 0;
+}
+video.userVideo {
+  height: 25%;
+  width: 25%;
+  position: absolute;
+  top: 0;
+  z-index: 1;
+  right: 0;
+  margin: 0;
+  padding: 0;
+  border: 1px solid white;
+}
+video {
+  object-fit: cover;
+}
+video.partnerVideo {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+
+
+}
+.call_control span {
+  width: 50px;
+  height: 50px;
+  background: rgba(0,0,0,0.6);
+  text-align: center;
+  line-height: 50px;
+  border-radius: 50%;
+}
+.call_control {
+  position: absolute;
+  bottom: 36px;
+  z-index: 11;
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+}
+.call_control span i {
+  font-size: 24px;
+  color: white;
+}
+i.fas.fa-phone-slash {
+  color: red;
+}
+
 
 
 
